--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:paddingTop="?attr/actionBarSize"
-        android:visibility="visible">
+        android:visibility="visible"
+        >
 
     <fragment
             android:id="@+id/nav_host_fragment"
@@ -17,10 +18,8 @@
             app:layout_constraintBottom_toTopOf="@id/nav_view"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
             app:navGraph="@navigation/mobile_navigation"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintVertical_bias="0"/>
+            />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/nav_view"
