add sensor template + compass tracker

--- a/app/src/main/res/layout/fragment_news.xml
+++ b/app/src/main/res/layout/fragment_news.xml
@@ -14,4 +14,5 @@
         tools:listitem="@layout/fragment_news_list"
         android:background="#FFFFFF"
         tools:actionBarNavMode="standard"
+        android:paddingTop="8dp"
         />
