--- a/app/src/main/res/layout/fragment_running.xml
+++ b/app/src/main/res/layout/fragment_running.xml
@@ -7,29 +7,38 @@
         android:layout_height="match_parent"
         tools:context=".ui.home.RunningFragment">
 
+    <FrameLayout
+            android:id="@+id/parent_fragment_container"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            />
+
     <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/outlinedTextField"
-            android:layout_width="412dp"
-            android:layout_height="84dp"
+            android:layout_width="262dp"
+            android:layout_height="100dp"
             android:hint="Record Name"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintVertical_bias="0.596"
+            app:layout_constraintHorizontal_bias="0.496"
+            app:layout_constraintVertical_bias="0.692"
             android:textColorHint="#673AB7"
             app:hintEnabled="true"
             app:hintAnimationEnabled="true">
 
         <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="63dp"
+                android:layout_width="261dp"
+                android:layout_height="86dp"
                 android:textAlignment="viewStart"
                 android:textStyle="bold"
                 android:textColor="#673AB7"
-                android:hint="Record 1"
                 />
     </com.google.android.material.textfield.TextInputLayout>
 
