--- a/app/src/main/res/layout/fragment_running.xml
+++ b/app/src/main/res/layout/fragment_running.xml
@@ -1,59 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".ui.home.RunningFragment">
+        xmlns:tools="http://schemas.android.com/tools">
 
-    <FrameLayout
-            android:id="@+id/parent_fragment_container"
-            android:layout_width="65dp"
-            android:layout_height="65dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            />
+    <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:context=".ui.sensor.RunningFragment">
 
-    <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/outlinedTextField"
-            android:layout_width="262dp"
-            android:layout_height="100dp"
-            android:hint="Record Name"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_bias="0.496"
-            app:layout_constraintVertical_bias="0.692"
-            android:textColorHint="#673AB7"
-            app:hintEnabled="true"
-            app:hintAnimationEnabled="true">
+        <TextView
+                android:id="@+id/text_steps"
+                android:layout_width="394dp"
+                android:layout_height="73dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:textAlignment="center"
+                android:textSize="30sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintVertical_bias="0.293"/>
 
-        <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="261dp"
-                android:layout_height="86dp"
-                android:textAlignment="viewStart"
-                android:textStyle="bold"
-                android:textColor="#673AB7"
+        <FrameLayout
+                android:id="@+id/parent_fragment_container"
+                android:layout_width="65dp"
+                android:layout_height="65dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
                 />
-    </com.google.android.material.textfield.TextInputLayout>
 
-    <Button
-            android:id="@+id/containedButton"
-            android:layout_width="126dp"
-            android:layout_height="70dp"
-            android:text="Start"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_bias="0.498"
-            app:layout_constraintVertical_bias="0.868"
-            android:textSize="24sp"/>
+        <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/outlinedTextField"
+                android:layout_width="262dp"
+                android:layout_height="100dp"
+                android:hint="Record Name"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintHorizontal_bias="0.496"
+                app:layout_constraintVertical_bias="0.692"
+                android:textColorHint="#673AB7"
+                app:hintEnabled="true"
+                app:hintAnimationEnabled="true">
+
+            <com.google.android.material.textfield.TextInputEditText
+                    android:layout_width="261dp"
+                    android:layout_height="86dp"
+                    android:textAlignment="viewStart"
+                    android:textStyle="bold"
+                    android:textColor="#673AB7"
+                    />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <Button
+                android:id="@+id/containedButton"
+                android:layout_width="126dp"
+                android:layout_height="70dp"
+                android:text="Start"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintHorizontal_bias="0.498"
+                app:layout_constraintVertical_bias="0.868"
+                android:textSize="24sp"/>
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
