News refactoring done

--- a/app/src/main/res/layout/fragment_news_item.xml
+++ b/app/src/main/res/layout/fragment_news_item.xml
@@ -6,7 +6,7 @@
     <data>
 
         <variable
-                type="com.softhouse.workingout.data.NewsContent.NewsItem"
+                type="com.softhouse.workingout.data.NewsItem"
                 name="data" />
     </data>
 
