--- a/app/src/main/res/layout/fragment_detail_running.xml
+++ b/app/src/main/res/layout/fragment_detail_running.xml
@@ -71,23 +71,26 @@
             <TextView
                     android:id="@+id/text_val_steps"
                     android:layout_height="wrap_content"
-                    android:layout_width="98dp"
+                    android:layout_width="match_parent"
                     android:text='@{`` + dto.steps}'
                     android:layout_margin="@dimen/text_margin"
-                    android:textSize="80sp"
+                    android:textSize="40sp"
                     android:layout_weight="0.25"
                     android:textStyle="bold"
                     android:textAllCaps="true"
                     app:autoSizeMinTextSize="28sp"
                     app:autoSizeMaxTextSize="160sp"
-                    app:autoSizeTextType="uniform"/>
+                    app:autoSizeTextType="uniform"
+                    android:textAlignment="center"/>
 
             <TextView
                     android:layout_height="wrap_content"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:text="steps"
                     android:textSize="24sp"
-                    android:layout_weight="0.25"/>
+                    android:layout_weight="0.25"
+                    android:textAlignment="center"
+                    android:layout_margin="@dimen/activity_horizontal_margin"/>
         </LinearLayout>
 
     </FrameLayout>
