chore : refactor calender implementation

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -58,7 +58,7 @@
 
     <fragment
             android:id="@+id/navigation_calender"
-            android:name="com.softhouse.workingout.ui.log.CalenderFragment"
+            android:name="com.softhouse.workingout.ui.log.calender.CalenderFragment"
             android:label="Log Calender"
             tools:layout="@layout/fragment_calender"/>
 
