--- a/app/src/main/res/layout/fragment_calender.xml
+++ b/app/src/main/res/layout/fragment_calender.xml
@@ -3,12 +3,19 @@
         xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
+        <variable
+                name="mode"
+                type="com.softhouse.workingout.ui.sensor.tracker.Mode"/>
+
     </data>
 
-    <FrameLayout
+    <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:context=".ui.log.CalenderFragment">
+            tools:context=".ui.log.calender.CalenderFragment"
+            android:orientation="vertical"
+            android:gravity="center_horizontal">
 
         <com.prolificinteractive.materialcalendarview.MaterialCalendarView
                 xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -19,5 +26,21 @@
                 app:mcv_selectionColor="#00F"
                 />
 
-    </FrameLayout>
+        <Button
+                android:id="@+id/switch_mode_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Change Mode"
+                />
+
+        <TextView
+                android:id="@+id/text_mode"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:text='@{mode.toString()}'
+                android:layout_margin="@dimen/text_margin"
+                android:textSize="18sp"
+                android:textAlignment="center"/>
+
+    </LinearLayout>
 </layout>
