--- a/app/src/main/res/layout/fragment_news_item.xml
+++ b/app/src/main/res/layout/fragment_news_item.xml
@@ -13,13 +13,15 @@
     <com.google.android.material.card.MaterialCardView
             android:id="@+id/card"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            app:strokeWidth="1dp">
 
         <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:layout_margin="12dp">
+                android:layout_margin="6dp">
 
             <!-- Media -->
             <ImageView
@@ -67,9 +69,16 @@
 
             </LinearLayout>
 
+            <View
+                    style="@style/Divider"
+                    android:id="@+id/divider"
+                    android:layout_marginTop="@dimen/text_margin"/>
+
         </LinearLayout>
 
     </com.google.android.material.card.MaterialCardView>
+
+
 </layout>
 
 
